# Asset-Manager

./: .replit  README.md  app.py  forms.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py
attached_assets/: Pasted-You-are-an-expert-Python-Flask-full-stack-developer-and_1772759920730.txt
instance/: database.db
project/: __init__.py  models.py
project/routes/: auth.py  complaints.py  dashboards.py  public.py
project/services/: classification.py  navigation.py  security.py
scripts/: seed_demo_users.py
static/css/: style.css
static/js/: main.js
templates/: admin_dashboard.html  analytics.html  base.html  citizen_dashboard.html  complaints.html  csrf_error.html  login.html  map.html  officer_dashboard.html  president_dashboard.html  public_dashboard.html  register.html  submit_complaint.html  ward_dashboard.html
tests/: test_auth.py  test_classification.py  test_factory.py  test_routes.py
