[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.48",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.6",
]
